--- a/css/style.css
+++ b/css/style.css
@@ -118,21 +118,13 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
 }
 
 .cv-preview {
-  max-width: 100%;
-  max-height: 70vh;
+  width: 75%;
   border-radius: 16px;
   background-color: #fff;
-  box-shadow: 0 0 20px var(--box-glow);
-  transition: transform 0.3s ease;
   cursor: pointer;
-}
-
-.cv-preview:hover {
-  transform: scale(1.02);
 }
 
 .cv-actions {
@@ -140,6 +132,9 @@ main {
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
+
+  position: sticky;
+  bottom: 20px;
 }
 
 .cv-button {
