--- a/AllyBooksWeb/style.css
+++ b/AllyBooksWeb/style.css
@@ -39,7 +39,8 @@
     margin: 10px;
     padding: 12px 20px;
     color: white;
-    background-color: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(4px);
     border: 1px solid white;
     border-radius: 5px;
     text-decoration: none;
