--- a/AllyBooksWeb/style.css
+++ b/AllyBooksWeb/style.css
@@ -45,6 +45,7 @@
     border-radius: 5px;
     text-decoration: none;
     transition: background 0.3s;
+    z-index: 1000;
   }
   
   .buttons a:hover {
