--- a/AllyBooksWeb/style.css
+++ b/AllyBooksWeb/style.css
@@ -126,10 +126,16 @@ body {
 
 /* Кнопка переключения анимации */
 
-#animation_btn {
+#animation {
     position: fixed;
     bottom: 20px;
     right: 20px;
+    font-size: 14px;
+
+    
+}
+
+#animation_btn {
     padding: 10px 18px;
     font-size: 10px;
     color: white;
