--- a/HB_Sofi/css/style.css
+++ b/HB_Sofi/css/style.css
@@ -3,52 +3,44 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  height: 100vh;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
+body, html {
+  height: 100%;
+  overflow: hidden;
   font-family: 'Poppins', sans-serif;
 }
 
-.slider {
-  height: 100vh;
-  width: 100%;
-}
-
 .page {
-  scroll-snap-align: start;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2rem;
+  flex-direction: column;
   text-align: center;
+  padding: 2rem;
 }
 
 .style1 {
-  background-color: #fcefee;
+  background-color: #fdf1f1;
   color: #3e3e3e;
 }
-
 .style2 {
   background-color: #e4f5f1;
   color: #2f4f4f;
 }
-
-.page h2 {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
+.style3 {
+  background-color: #e8e9fc;
+  color: #333;
 }
 
-.page p {
-  font-size: 1.8rem;
+h2, p {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 aside {
   position: absolute;
-  bottom: 20px;
+  bottom: 30px;
   font-size: 1rem;
   color: #666;
 }
