--- a/HB_Sofi/css/style.css
+++ b/HB_Sofi/css/style.css
@@ -5,8 +5,14 @@
 }
 body, html {
   height: 100%;
-  overflow: hidden;
   font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+}
+
+main#scroller {
+  height: 100vh;
+  width: 100vw;
+  transition: transform 0.7s ease;
 }
 
 .page {
