--- a/HB_Sofi/css/style.css
+++ b/HB_Sofi/css/style.css
@@ -7,6 +7,7 @@ body, html {
   height: 100%;
   font-family: 'Poppins', sans-serif;
   overflow: hidden;
+  touch-action: none;
 }
 
 main#scroller {
