--- a/HB_Sofi/css/style.css
+++ b/HB_Sofi/css/style.css
@@ -6,14 +6,14 @@
 }
 
 @font-face {
-  font-family: 'stl';
-  src: url('../font/SomeTimeLater.otf') format('opentype');
+  font-family: 'celestia';
+  src: url('../font/celestiareduxmedium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 :root {
-  --font-main: 'stl', cursive, sans-serif;
+  --font-main: 'celestia', cursive, sans-serif;
 
   /* Tła i gradienty */
  --color-bg-1: #d8f2e0;
