--- a/HB_Sofi/css/style.css
+++ b/HB_Sofi/css/style.css
@@ -13,7 +13,7 @@
 }
 
 :root {
-  --font-main: 'stl', cursive, sans-serif;
+  --font-main: 'maks', cursive, sans-serif;
 
   /* Tła i gradienty */
  --color-bg-1: #d8f2e0;
